--- a/css/corpo.css
+++ b/css/corpo.css
@@ -1,71 +1,45 @@
-#corpo{
-    width: 95%;
-    height: auto;
-    margin: 0 auto;
+*{
+    box-sizing: border-box;
 }
 
-#cabecalho{
+main{
+    width: 100%;
+    height: auto;
+}
+
+header{
     width: 100%;
     height: auto;
     background-image: url("../imagens/starfundo.jpg");
+    padding-bottom: 50px;
+    padding-top: 50px;
     border-radius: 6px;
 }
 
-#plogo{
-    text-align: center;
-}
-
-#imglogo{
-    width: 400px;
-    height: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-#link{
+nav{
     width: 100%;
     height: 80px;
-    position: relative;
+    padding: 1px;
 }
 
-#meio{
-    width: 100%;
-    height: 640px;
-}
-
-#ladoesq{
-    width: 30%;
-    height: 640px;
-    float: left;
-}
-
-#ladodir{
-    width: 70%;
-    height: 640px;
-    float: right;
-}
-
-#rodape{
-    width: 100%;
+article{
+    padding: 10px;
+    width: 95%;
+    background-color: #f1f1f1;
     height: auto;
-    padding-top: 150px;
+    margin: 0;
+    border-radius: 6px;
 }
 
-/*Responsividade*/
-@media all and (max-widht: 1100px){
-    nav, div, #corpo, #cabecalho, #plogo, #imglogo, #menu, #ladoesq, #ladodir{
-        width: 100%;
-        height: auto;
-    }
-    #imglogo{
-        width: 400px;
-        height: auto;
-    }
+footer{
+    padding: 10px;
+    width: 100%;
+    height: 80px;
 }
-@media all and (max-widht: 400px){
-    #imglogo{
+
+@media all and (max-widht: 1300px){
+    header, main, article, footer{
         width: 100%;
         height: auto;
-        padding-bottom: 20px;
     }
 }
