--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,28 +8,35 @@ hr{
     height: 5px;  
 }
 
+#pheader{
+    text-align: center;
+
+}
+
+#imgheader{
+    width: 400px;
+    height: auto;
+}
+
 .pcenter{
     text-align: center;
     color: #660033;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 13px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 #ileft{
     width: 300px;
     height: auto;
-    margin-right: 10px;
     float: left;
     padding-left: 10px;
-    padding-bottom: 30px;
 }
 
 h2{
     text-align: center;
+    padding-top: 70px;
 }
 
 .pjustify{
@@ -39,8 +46,7 @@ h2{
     font-style: block;
     font-size: italic;
     font-size: 16px;
-    padding-left: 23px;
-    padding-right: 3px;
+    padding-bottom: 120px;
 }
 
 #iright{
@@ -57,11 +63,17 @@ h3{
 
 h4{
     text-align: center;
+    padding-top: 50px;
 }
 
 #predes{
     text-align: center;
 
+}
+
+#pright{
+    text-align: right;
+    font-family: arial black;
 }
 
 .imgredes{
@@ -72,4 +84,20 @@ h4{
     padding-right: 5px;
     padding-bottom: 5px;
     opacity: 0.5;
+}
+
+@media all and (max-widht: 1000px){
+    h2{
+        padding-top: 20px;
+    }
+    .pjustify{
+        padding-bottom: 60px;
+    }
+}
+
+@media all and (max-widht: 415px){
+    #imgheader{
+        width: 100%;
+        height: auto;
+    }
 }
