--- a/css/menu.css
+++ b/css/menu.css
@@ -29,3 +29,24 @@
         color: white;
     }
 }
+
+@media all and(min-width: 600px) and (max-widht: 899px){
+    #menu{
+        width: auto;
+        height: auto;
+        background-color: blue;
+    }
+    #menu ul{
+        list-style: none;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    #menu ul li{
+        display: block;
+        word-spacing: 4px;
+        margin-bottom: 5px;
+        text-align: center;
+        font-family: arial black;
+    }
+}
