--- a/css/menu.css
+++ b/css/menu.css
@@ -49,4 +49,13 @@
         text-align: center;
         font-family: arial black;
     }
+    #menu ul li a{
+        text-decoration: none;
+        font-size: 20px;
+        letter-spacing: 4px;
+        color: black;
+    }
+    #menu ul li a:link a:visited, a:hover{
+        color: white;
+    }
 }
