--- a/css/menu.css
+++ b/css/menu.css
@@ -30,37 +30,37 @@
     }
 }
 
-@media all and (min-width: 600px) and (max-widht: 899px){
-    #menu{
-        width: auto;
-        height: auto;
-        background-color: blue;
-    }
-    #menu ul{
-        list-style: none;
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    #menu ul li{
-        display: block;
-        word-spacing: 4px;
-        margin-bottom: 5px;
-        text-align: center;
-        font-family: arial black;
-    }
-    #menu ul li a{
-        text-decoration: none;
-        font-size: 20px;
-        letter-spacing: 4px;
-        color: black;
-    }
-    #menu ul li a:link a:visited{
-        color: white;
-    }
-    #menu ul li a:hover{
-        color: white;
-    }
+@media all and (min-width: 600px) and (max-width: 899px){
+	#menu{
+		width: auto;
+		height: auto;
+		background-color: blue;
+	}
+	#menu ul{
+		list-style: none;
+		width: 100%;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	#menu ul li{
+		display: block;
+		word-spacing: 4px;
+		margin-bottom: 5px;
+		text-align: center;
+		font-family: arial black;
+	}
+	#menu ul li a{
+		text-decoration: none;
+		font-size: 20px;
+		letter-spacing: 4px;
+		color: black;
+	}
+	#menu ul li a:link, a:visited{
+		color: white;
+	}
+	#menu ul li a:hover{
+		color: white;
+	}
 }
 
 @media all and (max-width: 599px){
