--- a/css/menu.css
+++ b/css/menu.css
@@ -1,97 +1,82 @@
-@media all and (min-width: 900px){
-    #menu{
-        width: 100%;
-        height: auto;
-        background-color: red;
-    }
-    #menu ul{
-        width: 100%;
-        text-align: center;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    #menu ul li{
-        display: inline;
-        word-spacing: 10px;
-        font-family: Arial black;
-    }
-    #menu ul li a{
-        text-decoration: none;
-        font-size: 20px;
-        letter-spacing: 2px;
-        color: black;
-    }
-    #menu ul li a:link, a:visited{
-        color: white;
-        padding: 20px;
-    }
-    #menu ul li a:hover{
-        color: white;
-    }
+*{
+    margin: 0;
+    padding: 0;
 }
 
-@media all and (min-width: 600px) and (max-width: 899px){
-	#menu{
-		width: auto;
-		height: auto;
-		background-color: blue;
-	}
-	#menu ul{
-		list-style: none;
-		width: 100%;
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
-	#menu ul li{
-		display: block;
-		word-spacing: 4px;
-		margin-bottom: 5px;
-		text-align: center;
-		font-family: arial black;
-	}
-	#menu ul li a{
-		text-decoration: none;
-		font-size: 20px;
-		letter-spacing: 4px;
-		color: black;
-	}
-	#menu ul li a:link, a:visited{
-		color: white;
-	}
-	#menu ul li a:hover{
-		color: white;
-	}
+#menu{
+    width: 100%;
+    height: 60px;
+    background-color: #222;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-@media all and (max-width: 599px){
+#menu ul{
+    list-style: none;
+    position: relative;
+}
+
+#menu ul li{
+    width: 120px;
+    float: left;
+}
+
+#menu a{
+    padding: 15px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    background-color: #222;
+    color: #fff;
+}
+
+#menu ul ul{
+    position: absolute;
+    visibility: hidden;
+}
+
+#menu ul li:hover ul{
+    visibility: visible;
+}
+
+#menu a:hover{
+    background-color: #f4f4f4;
+    color: #555;
+}
+
+#menu ul ul li{
+    float: none;
+    border-bottom: solid 1px #ccc;
+}
+
+#menu ul ul li a{
+    background-color: green;
+}
+
+#label[for="bt_menu"]{
+    padding: 5px;
+    background-color: #222;
+    color: #fff;
+    text-align: center;
+    font-size: 30px;
+    cursor: pointer;
+    height: 50px;
+}
+
+@media (max-widht: 800px){
     #menu{
         width: auto;
         height: auto;
-        margin-bottom: auto;
-        background-color: yellow;
-    }
-    #menu ul{
-        list-style: none;
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
     }
     #menu ul li{
-        text-align: center;
-        display: block;
-        word-spacing: 4px;
-        margin-bottom: 5px;
-        font-family: arial black;
+        width: 100%;
     }
-    #menu ul li a{
-        text-decoration: none;
-        font-size: 18px;
-        color: black;
+    #menu ul ul{
+        position: static;
+        max-height: 0;
+        transition: all 4s;
     }
-    #menu ul li a:link, a:visited{
-        color: white;
-    }
-    #menu ul li a:hover{
-        color: white;
+    #menu ul li:hover ul{
+        height: auto;
+        max-height: 200px;
     }
 }
