--- a/css/menu.css
+++ b/css/menu.css
@@ -52,49 +52,52 @@
     background-color: green;
 }
 
-#label[for="bt_menu"]{
-    padding: 5px;
-    background-color: #222;
-    color: #fff;
-    text-align: center;
-    font-size: 30px;
-    cursor: pointer;
-    height: 50px;
+label[for="bt_menu"]{
+	padding: 5px;
+	background-color: #222;
+	color: #fff;
+	text-align: center;
+	font-size: 30px;
+	cursor: pointer;
+	height: 50px;
 }
 
 #bt_menu{
-    display: none;
+	display: none;
 }
 
 label[for="bt_menu"]{
-    display: none;
+	display: none;
 }
 
-@media (max-widht: 800px){
-    #label[for="bt_menu"]{
-        display: block;
-    }
-    #bt_menu:checked ~ #menu{
-        margin: 0;
-        height: auto;
-    }
-    #menu{
-        margin-left: -100%;
-        transition: all 1s;
-        height: 0;
-    }
-    #menu ul li{
-        width: 100%;
-        float: none;
-    }
-    #menu ul ul{
-        position: static;
-        overflow: hidden;
-        max-height: 0;
-        transition: all 4s;
-    }
-    #menu ul li:hover ul{
-        height: auto;
-        max-height: 200px;
-    }
+@media (max-width: 800px){
+	label[for="bt_menu"]{
+		display: block;
+	}
+	#bt_menu:checked ~ #menu{
+		margin: 0;
+		height: auto;
+	}
+	
+	
+	#menu{
+		margin-left: -100%;
+		transition: all 1s;
+		height: 0;
+	}
+	#menu ul li{
+		width: 100%;
+		float: none;
+	}
+	#menu ul ul{
+		position: static;
+		overflow: hidden;
+		max-height: 0;
+		transition: all 4s;
+	}
+	#menu ul li:hover ul{
+		height: auto;
+		max-height: 200px;
+	}
+	
 }
