--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,7 +5,9 @@ body{
 hr{
     color: #00ff00;
     background-color: #00ff00;
-    height: 5px;  
+    height: 5px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 #pheader{
