--- a/css/menu.css
+++ b/css/menu.css
@@ -1,101 +1,104 @@
-*{
-    margin: 0;
-    padding: 0;
+.topnav{
+	overflow: hidden;
+	background-color: #333;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-#menu{
-    width: 100%;
-    height: 60px;
-    background-color: #222;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#menu ul{
-    list-style: none;
-    position: relative;
-}
-
-#menu ul li{
-    width: 120px;
-    float: left;
-}
-
-#menu a{
-    padding: 15px;
-    display: block;
-    text-align: center;
-    text-decoration: none;
-    background-color: #222;
-    color: #fff;
-}
-
-#menu ul ul{
-    position: absolute;
-    visibility: hidden;
-}
-
-#menu ul li:hover ul{
-    visibility: visible;
-}
-
-#menu a:hover{
-    background-color: #f4f4f4;
-    color: #555;
-}
-
-#menu ul ul li{
-    float: none;
-    border-bottom: solid 1px #ccc;
-}
-
-#menu ul ul li a{
-    background-color: green;
-}
-
-label[for="bt_menu"]{
-	padding: 5px;
-	background-color: #222;
-	color: #fff;
+.topnav a{
+	float: left;
+	color: #f2f2f2;
 	text-align: center;
-	font-size: 30px;
-	cursor: pointer;
-	height: 50px;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+	display: block;
 }
 
-#bt_menu{
+.active{
+	background-color: #4caf50;
+	color: white;
+}
+
+.topnav .icon{
 	display: none;
 }
 
-label[for="bt_menu"]{
-	display: none;
+.dropdown{
+	float: left;
 }
 
-@media (max-width: 800px){
-	label[for="bt_menu"]{
+.dropdown .dropbtn{
+	font-size: 17px;
+	border: none;
+	outline: none;
+	color: white;
+	padding: 14px 16px;
+	background-color: inherit;
+	font-family: inherit;
+	margin: 0;
+}
+
+.dropdownsub{
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 120px;
+	box-shadow: 10px 18px 26px 10px rgba(0, 0, 0, 0.2);
+}
+
+.dropdownsub a{
+	float: none;
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover{
+	background-color: #555;
+	color: white;
+}
+
+.dropdownsub a:hover{
+	background-color: #ddd;
+	color: black;
+}
+
+.dropdown:hover .dropdownsub{
+	display: block;
+}
+
+@media screen and (max-width: 750px) {
+	.topnav a:not(:first-child), .dropdown .dropbtn{
+		display: none;
+	}
+	.topnav a.icon{
+		float: right;
 		display: block;
 	}
-	#bt_menu:checked ~ #menu{
-		margin: 0;
-		height: auto;
-	}	
-	#menu{
-		margin-left: -100%;
-		transition: all 1s;
-		height: 0;
+	.topnav.responsive{
+		position: relative;
 	}
-	#menu ul li{
-		width: 100%;
+	.topnav.responsive .icon{
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a{
+		float: none;
+		display: block;
+		text-align: left;
+	}
+	.topnav.responsive .dropdown{
 		float: none;
 	}
-	#menu ul ul{
-		position: static;
-		overflow: hidden;
-		max-height: 0;
-		transition: all 4s;
+	.topnav.responsive .dropdownsub{
+		position: relative;
 	}
-	#menu ul li:hover ul{
-		height: auto;
-		max-height: 200px;
+	.topnav.responsive .dropdown .dropbtn{
+		display: block;
+		width: 100%;
+		text-align: left;
 	}
-	
 }
