--- a/css/corpo.css
+++ b/css/corpo.css
@@ -3,7 +3,10 @@
 }
 
 main{
-	width: 100%;
+	margin-top: -8px;
+	margin-left: -8px;
+	margin-bottom: -8px;
+	width: 101%;
 	height: auto;
 }
 
@@ -16,6 +19,7 @@ header{
 }
 
 #divesqheader{
+	margin: 0;
 	width: 30%;
 	height: auto;
 	padding-top: 50px;
@@ -42,7 +46,7 @@ nav{
 
 article{
 	padding: 10px;
-	width: 95%;
+	width: 100%;
 	background-color: #f1f1f1;
 	height: auto;
 	margin: 0;
