--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,8 +6,8 @@ hr{
     color: #00ff00;
     background-color: #00ff00;
     height: 5px;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: -1px;
+    margin-bottom: -1px;
 }
 
 #pheader{
